--- a/evals/Snakefile
+++ b/evals/Snakefile
@@ -39,8 +39,8 @@ PaSGAL_FILES = ["L1.fa", "L2.fastq", "L3.fastq",
 # -- PaSGAL does not accept .gaf and bi-directional .vg;
 # -- Vargas does not accept .gaf and .vg but only .gdef that can be build by .fa
 
-TABLE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "graphaligner", "pasgal", "vargas", "astarix-prefix-illumina", "dijkstra"]
-TABLE_ILLUMINA_Ns             = [100000, 1000, 1000, 1000, 1000, 1000]  # number of reads
+TABLE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "graphaligner", "pasgal", "vargas", "astarix-prefix-illumina"] #, "dijkstra"]
+TABLE_ILLUMINA_Ns             = [100000, 1000, 1000, 1000, 1000] #, 1000]  # number of reads
 TABLE_ILLUMINA_GRAPHS         = ["MHC1", "ecoli"] #, "LRC"]
 TABLE_ILLUMINA_GRAPH_HEADS    = [100000000]
 TABLE_ILLUMINA_SEQ_TECHNOLOGY = ["illumina"]
@@ -48,8 +48,8 @@ TABLE_ILLUMINA_ms             = [200]
 TABLE_ILLUMINA_errors         = [-1]
 TABLE_ILLUMINA_seedlen        = [25]
 
-TABLE_HIFI_ALGOS          = ["astarix-seeds", "graphaligner", "vargas", "pasgal", "dijkstra", "astarix-prefix"]
-TABLE_HIFI_Ns             = [2, 0.1, 0.02, 0.1, 0.1, 0.1]  # coverage of reads
+TABLE_HIFI_ALGOS          = ["astarix-seeds", "graphaligner", "vargas", "pasgal", "astarix-prefix"] #"dijkstra", 
+TABLE_HIFI_Ns             = [4, 0.1, 0.1, 0.1, 0.1] #, 0.1]  # coverage of reads
 TABLE_HIFI_GRAPHS         = ["MHC1", "ecoli"]
 TABLE_HIFI_GRAPH_HEADS    = [100000000]
 TABLE_HIFI_SEQ_TECHNOLOGY = ["hifi-natural"]
@@ -57,10 +57,11 @@ TABLE_HIFI_ms             = [0]
 TABLE_HIFI_errors         = [0.003]
 TABLE_HIFI_seedlen        = [50]
 
-REFSIZE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "vargas", "graphaligner", "pasgal", "astarix-prefix-illumina", "dijkstra"]
-REFSIZE_ILLUMINA_Ns             = [10000, 1000, 1000, 1000, 1000, 1000]  # number of reads
+REFSIZE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "vargas", "graphaligner", "pasgal", "astarix-prefix-illumina"] #, "dijkstra"]
+REFSIZE_ILLUMINA_Ns             = [10000, 10000, 1000, 1000, 1000] #, 1000]  # number of reads
 REFSIZE_ILLUMINA_GRAPHS         = ["MHC1"]
-REFSIZE_ILLUMINA_GRAPH_HEADS    = [5000, 10000, 20000, 50000, 500000, 5000000]
+#REFSIZE_ILLUMINA_GRAPH_HEADS    = [5000, 10000, 20000, 50000, 500000, 5000000]
+REFSIZE_ILLUMINA_GRAPH_HEADS    = [150000, 500000, 1500000, 5000000]
 REFSIZE_ILLUMINA_SEQ_TECHNOLOGY = ["illumina"]
 REFSIZE_ILLUMINA_ms             = [200]
 REFSIZE_ILLUMINA_errors         = [-1]
@@ -69,7 +70,7 @@ REFSIZE_ILLUMINA_seedlen        = [25]
 REFSIZE_HIFI_ALGOS          = ["astarix-seeds", "graphaligner", "pasgal", "vargas"] #, "astarix-prefix-illumina", ] # "dijkstra"
 REFSIZE_HIFI_Ns             = [1, 0.1, 0.02, 0.02]  # 0.02 coverage of reads
 REFSIZE_HIFI_GRAPHS         = ["MHC1"]
-REFSIZE_HIFI_GRAPH_HEADS    = [50000, 500000, 5000000]
+REFSIZE_HIFI_GRAPH_HEADS    = [150000, 500000, 1500000, 5000000]
 REFSIZE_HIFI_SEQ_TECHNOLOGY = ["hifi-natural"]
 REFSIZE_HIFI_ms             = ["-1"]
 REFSIZE_HIFI_errors         = [0.003]
@@ -78,21 +79,21 @@ REFSIZE_HIFI_seedlen        = [50]
 READLEN_ALGOS           = ["astarix-seeds", "graphaligner", "pasgal", "vargas"]
 READLEN_Ns              = [1, 0.02, 0.02, 0.02]
 READLEN_GRAPHS          = ["MHC1"]  #["ecoli"]
-READLEN_GRAPH_HEADS     = [10000000]  # 0 stands for the .gfa graph version, not the linear .fa
+READLEN_GRAPH_HEADS     = [100000000]  # 0 stands for the .gfa graph version, not the linear .fa
 READLEN_SEQ_TECHNOLOGY  = ["hifi"] #"ccs"
-READLEN_ms              = [2000, 7000, 15000, 25000]
+READLEN_ms              = [1000, 2000, 4000, 7000, 15000, 25000]
 READLEN_errors          = [0.003]
-READLEN_seedlen         = [50]
+READLEN_seedlen         = [150]
 
 # NOT USED
-ABLATION_ALGOS          = ["astarix-seeds", "astarix-seeds_wo_skip_near_crumbs_pos"] #"astarix-seeds_wo_match_pos"] #"astarix-seeds_wo_opt", "vargas"]
-ABLATION_Ns             = [1, 0.1]  # coverage
+ABLATION_ALGOS          = ["astarix-seeds"] #, "astarix-seeds_wo_skip_near_crumbs_pos"] #"astarix-seeds_wo_match_pos"] #"astarix-seeds_wo_opt", "vargas"]
+ABLATION_Ns             = [0.5] #, 0.1]  # coverage
 ABLATION_GRAPHS         = ["MHC1"] #["ecoli"]
 ABLATION_GRAPH_HEADS    = [100000000]
 ABLATION_SEQ_TECHNOLOGY = ["hifi"] #"ccs", "illumina",
 ABLATION_ms             = [2000, 10000, 20000, 25000] #, 25000, 30000] # [100, 300, 700, 1000, 2000] #, 3000, 5000, 7000, 10000, 13000, 15000, 18000, 20000]
 ABLATION_errors         = [0.003]
-ABLATION_seedlen        = [50]
+ABLATION_seedlen        = [150]
 
 # NOT USED
 ERRORRATE_ALGOS          = ["astarix-seeds-illumina"] #, "astarix-seeds_wo_match_pos"]
