--- a/evals/Snakefile
+++ b/evals/Snakefile
@@ -16,15 +16,15 @@ TIMELIMIT       = "(timeout 3600s"
 TIMEOUTPRINT    = ") || ([ $? -eq 124 ] && echo -e \"timeout\" >{log}) || (echo -e \"exit error code\n$?\" | tee {log})"
 
 DIJKSTRA_CMD								= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a dijkstra     -D 14 -M 0 -S 1 -G 5                                                             -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_PREFIX_ILLUMINA_CMD					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-prefix -D 14 -M 0 -S 1 -G 5 -d 5                                                        -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_PREFIX_CMD							= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-prefix -D 14 -M 0 -S 1 -G 1 -d 5                                                        -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_ILLUMINA_CMD 					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 5 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-#ASTARIX_SEEDS_EXACT_SHORT_CMD 				= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_EXACT_CMD 					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_EXACT_WO_MATCH_POS_CMD		= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen} --seeds_match_pos_optimization 0 -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_EXACT_WO_SKIP_NEAR_CRUMBS_CMD = "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen} --seeds_skip_near_crumbs 0       -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_APPROX_CMD					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen} --seeds_max_errors 1             -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
-ASTARIX_SEEDS_EXACT_WO_OPT_CMD				= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --seeds_len {wildcards.seedlen} --seeds_match_pos_optimization 0 --seeds_skip_near_crumbs 0 -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_PREFIX_ILLUMINA_CMD					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-prefix -D 14 -M 0 -S 1 -G 5 --fixed_trie_depth 1 -d 5                                                        -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_PREFIX_CMD							= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-prefix -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 -d 5                                                        -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_ILLUMINA_CMD 					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 5 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+#ASTARIX_SEEDS_EXACT_SHORT_CMD 				= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_EXACT_CMD 					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen}                                  -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_EXACT_WO_MATCH_POS_CMD		= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen} --seeds_match_pos_optimization 0 -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_EXACT_WO_SKIP_NEAR_CRUMBS_CMD = "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen} --seeds_skip_near_crumbs 0       -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_APPROX_CMD					= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen} --seeds_max_errors 1             -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
+ASTARIX_SEEDS_EXACT_WO_OPT_CMD				= "{TIMELIMIT} {ASTARIX_BIN} align-optimal -a astar-seeds  -D 14 -M 0 -S 1 -G 1 --fixed_trie_depth 1 --seeds_len {wildcards.seedlen} --seeds_match_pos_optimization 0 --seeds_skip_near_crumbs 0 -q {input.reads} -g $(echo {input.graph} | sed 's|_head100000000|_head0|g') -o $(dirname {output.align}) >{output.file} {TIMEOUTPRINT} >>{output.file}"
 
 GA_CMD = "{TIMELIMIT} {GA_BIN} --seeds-first-full-rows 64 -b 10000 -t 1 -a alignments.gaf -f {input.reads} -g {input.graph_vg} >{output.file} {TIMEOUTPRINT} >>{output.file}"
 PASGAL_CMD = "{TIMELIMIT} {PASGAL_BIN} -m vg -r {input.graph_vg} -q {input.reads} -t 1 -o {output.file} >{output.file} {TIMEOUTPRINT}"
@@ -39,8 +39,8 @@ PaSGAL_FILES = ["L1.fa", "L2.fastq", "L3.fastq",
 # -- PaSGAL does not accept .gaf and bi-directional .vg;
 # -- Vargas does not accept .gaf and .vg but only .gdef that can be build by .fa
 
-TABLE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "graphaligner", "pasgal", "vargas", "astarix-prefix-illumina"] #, "dijkstra"]
-TABLE_ILLUMINA_Ns             = [100000, 1000, 1000, 1000, 1000] #, 1000]  # number of reads
+TABLE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "astarix-prefix-illumina"] #, "graphaligner", "pasgal", "vargas"] #, ] 
+TABLE_ILLUMINA_Ns             = [100000, 1000] #, 1000, 1000, 1000] #, 1000]  # number of reads
 TABLE_ILLUMINA_GRAPHS         = ["MHC1", "ecoli"] #, "LRC"]
 TABLE_ILLUMINA_GRAPH_HEADS    = [100000000]
 TABLE_ILLUMINA_SEQ_TECHNOLOGY = ["illumina"]
@@ -48,8 +48,8 @@ TABLE_ILLUMINA_ms             = [200]
 TABLE_ILLUMINA_errors         = [-1]
 TABLE_ILLUMINA_seedlen        = [25]
 
-TABLE_HIFI_ALGOS          = ["astarix-seeds", "graphaligner", "vargas", "pasgal"] #, "astarix-prefix"] #"dijkstra", 
-TABLE_HIFI_Ns             = [4, 0.1, 0.1, 0.1, 0.1] #, 0.1]  # coverage of reads
+TABLE_HIFI_ALGOS          = ["astarix-seeds", "astarix-prefix"] #, "graphaligner", "pasgal", "vargas"] ]
+TABLE_HIFI_Ns             = [10, 0.1] #, 0.1, 0.1, 0.1] #, 0.1]  # coverage of reads
 TABLE_HIFI_GRAPHS         = ["MHC1", "ecoli"]
 TABLE_HIFI_GRAPH_HEADS    = [100000000]
 TABLE_HIFI_SEQ_TECHNOLOGY = ["hifi-natural"]
@@ -57,18 +57,18 @@ TABLE_HIFI_ms             = [0]
 TABLE_HIFI_errors         = [0.003]
 TABLE_HIFI_seedlen        = [150]
 
-REFSIZE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina", "vargas", "graphaligner", "pasgal", "astarix-prefix-illumina"] #, "dijkstra"]
-REFSIZE_ILLUMINA_Ns             = [10000, 10000, 1000, 1000, 1000] #, 1000]  # number of reads
+REFSIZE_ILLUMINA_ALGOS          = ["astarix-seeds-illumina"] #, "astarix-prefix-illumina"] #, "graphaligner", "pasgal", "vargas"] #, ]
+REFSIZE_ILLUMINA_Ns             = [100000] #, 1000] #, 1000, 1000, 1000]  # number of reads
 REFSIZE_ILLUMINA_GRAPHS         = ["MHC1"]
 #REFSIZE_ILLUMINA_GRAPH_HEADS    = [5000, 10000, 20000, 50000, 500000, 5000000]
-REFSIZE_ILLUMINA_GRAPH_HEADS    = [150000, 500000, 1500000, 5000000]
+REFSIZE_ILLUMINA_GRAPH_HEADS    = [700000, 1000000, 1500000, 2000000, 3000000, 4000000, 5000000] #[150000, 500000, 1500000, 5000000]
 REFSIZE_ILLUMINA_SEQ_TECHNOLOGY = ["illumina"]
 REFSIZE_ILLUMINA_ms             = [200]
 REFSIZE_ILLUMINA_errors         = [-1]
 REFSIZE_ILLUMINA_seedlen        = [25]
 
-REFSIZE_HIFI_ALGOS          = ["astarix-seeds", "graphaligner", "pasgal", "vargas"] #, "astarix-prefix-illumina", ] # "dijkstra"
-REFSIZE_HIFI_Ns             = [1, 0.1, 0.02, 0.02]  # 0.02 coverage of reads
+REFSIZE_HIFI_ALGOS          = ["astarix-seeds"] #, "graphaligner", "pasgal", "vargas"] #
+REFSIZE_HIFI_Ns             = [1] #, 0.1, 0.02, 0.02]  # 0.02 coverage of reads
 REFSIZE_HIFI_GRAPHS         = ["MHC1"]
 REFSIZE_HIFI_GRAPH_HEADS    = [150000, 500000, 1500000, 5000000]
 REFSIZE_HIFI_SEQ_TECHNOLOGY = ["hifi-natural"]
@@ -76,12 +76,12 @@ REFSIZE_HIFI_ms             = ["-1"]
 REFSIZE_HIFI_errors         = [0.003]
 REFSIZE_HIFI_seedlen        = [150]
 
-READLEN_ALGOS           = ["astarix-seeds", "graphaligner", "pasgal", "vargas"]
-READLEN_Ns              = [1, 0.02, 0.02, 0.02]
+READLEN_ALGOS           = ["astarix-seeds"] #, "graphaligner", "pasgal", "vargas"]
+READLEN_Ns              = [4] #, 0.02, 0.02, 0.02]
 READLEN_GRAPHS          = ["MHC1"]  #["ecoli"]
 READLEN_GRAPH_HEADS     = [100000000]  # 0 stands for the .gfa graph version, not the linear .fa
 READLEN_SEQ_TECHNOLOGY  = ["hifi"] #"ccs"
-READLEN_ms              = [1000, 2000, 4000, 7000, 15000, 25000]
+READLEN_ms              = [2000, 4000, 7000, 15000, 25000]
 READLEN_errors          = [0.003]
 READLEN_seedlen         = [150]
 
